# uuif

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  data_types.h  gen_debug.bat
core/: core.cpp  core.h
demo/: CMakeLists.txt
demo/backend/: CMakeLists.txt  main.cpp
demo/glfw/: CMakeLists.txt  main.cpp
demo/raylib/: CMakeLists.txt  main.cpp  raylib_renderer.hpp
framework/: data_types.h  framework.h
framework/core/: core.cpp  core.h
framework/renderer/: renderer.h
framework/util/: hashing.hpp
framework/widgets/: checkbox.cpp  checkbox.h  widget.h  window.cpp  window.h
include/uuif/: checkbox.h  core.h  data_types.h  focus_manager.h  framework.h  hashing.hpp  renderer.h  singleton.hpp  widget.h  window.h
src/: CMakeLists.txt  checkbox.cpp  core.cpp  data_types.h  focus_manager.cpp  widget.cpp  window.cpp
src/core/: core.cpp  core.h
src/utils/: hashing.hpp
src/widgets/: checkbox.h  window.h
tests/: CMakeLists.txt  main.cpp  uuif-test.cpp
widgets/: checkbox.h  widget.cpp  widget.h  window.cpp  window.h
